# object-storage-integrator

./: README.md  spread.yaml
.github/: renovate.json5
.github/workflows/: ci.yaml  integration_test.yaml  publish-lib.yaml  release.yaml
azure_storage/: README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
azure_storage/lib/charms/data_platform_libs/v0/: object_storage.py
azure_storage/src/: charm.py
azure_storage/src/events/: base.py  general.py  provider.py
azure_storage/tests/integration/test-charm-azure/: charmcraft.yaml  pyproject.toml
azure_storage/tests/integration/test-charm-azure/lib/charms/data_platform_libs/v0/: object_storage.py
azure_storage/tests/integration/test-charm-azure/src/: charm.py
environments/: concierge-microk8s.yaml
gcs/: README.md  charmcraft.yaml  metadata.yaml  pyproject.toml
gcs/lib/charms/data_platform_libs/v0/: object_storage.py
gcs/src/: constants.py
gcs/src/events/: base.py  provider.py
gcs/tests/integration/requirer-charm/: charmcraft.yaml  pyproject.toml
gcs/tests/integration/requirer-charm/lib/charms/data_platform_libs/v0/: object_storage.py
gcs/tests/integration/requirer-charm/src/events/: general.py  requirer.py
gcs/tests/unit/: test_relation.py
lib/: .gitignore  README.md  pyproject.toml  tox.ini
lib/object_storage/: README.md  __init__.py  azure_storage.py  constants.py  data.py  decorators.py  domain.py  event_handlers.py  events.py  exceptions.py  gcs.py  s3.py  secrets.py  utils.py
s3/: README.md  charmcraft.yaml  deploy.sh  metadata.yaml  pyproject.toml  tox.ini
s3/lib/charms/data_platform_libs/v0/: data_interfaces.py  object_storage.py
s3/src/: s3_lib.py
s3/src/core/: context.py  domain.py
s3/src/events/: base.py  provider.py
s3/src/managers/: s3.py
s3/tests/integration/: conftest.py  helpers.py  test_config.py  test_iam_permissions.py  test_lib_compat.py  test_provider.py
s3/tests/integration/test-charm-s3/: pyproject.toml
s3/tests/integration/test-charm-s3-v0/src/: charm.py
s3/tests/integration/test-charm-s3/lib/charms/data_platform_libs/v0/: object_storage.py
s3/tests/integration/test-charm-s3/src/: charm.py  s3_lib.py
s3/tests/integration/test_consumers/: conftest.py  helpers.py  matrix.py  mysql.py  test_compat.py
s3/tests/integration/test_requirer_charms/: test_compat.py
s3/tests/unit/: test_config.py  test_provider.py
tests/s3_microk8s/test_compat_mongodb_8_edge/: task.yaml
tests/s3_microk8s/test_compat_mongodb_8_stable/: task.yaml
tests/s3_microk8s/test_compat_mysql_8_edge/: task.yaml
tests/s3_microk8s/test_compat_postgresql_14_stable/: task.yaml
tests/s3_microk8s/test_compat_postgresql_16_edge/: task.yaml
tests/s3_microk8s/test_consumers/: task.yaml
tests/s3_microk8s/test_consumers_compat/: task.yaml
tests/s3_vm/test_compat_mongodb_8_edge/: task.yaml
tests/s3_vm/test_compat_mongodb_8_stable/: task.yaml
tests/s3_vm/test_compat_mysql_8_edge/: task.yaml
tests/s3_vm/test_compat_opensearch_2_stable/: task.yaml
tests/s3_vm/test_compat_postgresql_14_edge/: task.yaml
tests/s3_vm/test_compat_postgresql_14_stable/: task.yaml
tests/s3_vm/test_compat_postgresql_16_edge/: task.yaml
tests/s3_vm/test_consumers/: task.yaml
tests/s3_vm/test_consumers_compat/: task.yaml
