# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "object-storage"
version = "0.1.0"
description = "Common interface lib for providers and requirers of object storage relations"

requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
