[tool.poetry]
name = "gcs-requirer-charm"
version = "0.1.0"
description = "Minimal requirer charm for gcs-credentials"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ops = "^2.14.0"
tenacity = "^9.1.2"
pydantic = "^2.11.3"
object-storage-charmlib = { git = "https://github.com/canonical/object-storage-integrator.git", subdirectory = "lib", branch = "fix/missing-imports" }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
