# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = "^3.10"
ops = ">=2.18.0"
object-storage-charmlib = { git = "https://github.com/canonical/object-storage-integrator.git", subdirectory = "lib"}

[tool.poetry.group.charm-libs.dependencies]
